// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomerProfileCard with a private customer profile renders normally 1`] = `
<div
  class="card"
>
  <div
    class="cardHeader"
  >
    <span
      class="title"
    >
      ASIAKASTIEDOT
    </span>
  </div>
  <div
    class="cardBody"
  >
    <article
      class="section"
    >
      <h4
        class="text standard h4 m title"
      >
        HENKILÖTIEDOT
      </h4>
      <section
        class="body"
      >
        <div
          class="labelValuePair"
        >
          <span
            class="label standard"
          >
            Etunimet:
          </span>
          <span
            class="value left"
          >
            Testi
          </span>
        </div>
        <div
          class="labelValuePair"
        >
          <span
            class="label standard"
          >
            Sukunimi:
          </span>
          <span
            class="value left"
          >
            Käyttäjä
          </span>
        </div>
        <div
          class="labelValuePair"
        >
          <span
            class="label standard"
          >
            Henkilötunnus:
          </span>
          <span
            class="value left"
          >
            010101A1234
          </span>
        </div>
      </section>
    </article>
    <article
      class="section"
    >
      <section
        class="body"
      >
        <div
          class="labelValuePair"
        >
          <span
            class="label standard"
          >
            Jakeluosoite:
          </span>
          <span
            class="value left"
          >
            Testikatu 1
          </span>
        </div>
        <div
          class="labelValuePair"
        >
          <span
            class="label standard"
          >
            Postinumero:
          </span>
          <span
            class="value left"
          >
            00100
          </span>
        </div>
        <div
          class="labelValuePair"
        >
          <span
            class="label standard"
          >
            Postitoimipaikka:
          </span>
          <span
            class="value left"
          >
            Helsinki
          </span>
        </div>
      </section>
    </article>
    <article
      class="section"
    >
      <section
        class="body"
      >
        <div
          class="labelValuePair"
        >
          <span
            class="label standard"
          >
            Matkapuhelin:
          </span>
          <span
            class="value left"
          >
            0504391742
          </span>
        </div>
        <div
          class="labelValuePair"
        >
          <span
            class="label standard"
          >
            Sähköpostiosoite:
          </span>
          <span
            class="value left"
          >
            test@example.com
          </span>
        </div>
      </section>
    </article>
    <article
      class="section"
    >
      <section
        class="body"
      >
        <div
          class="labelValuePair"
        >
          <span
            class="label standard"
          >
            Asiakasryhmä:
          </span>
          <span
            class="value left"
          >
            Yksityinen
          </span>
        </div>
        <div
          class="labelValuePair"
        >
          <span
            class="label standard"
          />
          <span
            class="value left"
          >
            Laskutus paperisena
          </span>
        </div>
      </section>
    </article>
    <article
      class="section"
    >
      <section
        class="body"
      >
        <div
          class="labelValuePair"
        >
          <span
            class="label standard"
          >
            Huomiot:
          </span>
          <span
            class="value left"
          >
            Testikäyttäjä
          </span>
        </div>
      </section>
    </article>
  </div>
   
</div>
`;

exports[`CustomerProfileCard with an organization customer profile renders normally 1`] = `
<div
  class="card"
>
  <div
    class="cardHeader"
  >
    <span
      class="title"
    >
      ASIAKASTIEDOT
    </span>
  </div>
  <div
    class="cardBody"
  >
    <article
      class="section"
    >
      <h4
        class="text standard h4 m title"
      >
        YRITYS / YHTEISÖ
      </h4>
      <section
        class="body"
      >
        <div
          class="labelValuePair"
        >
          <span
            class="label standard"
          >
            Nimi:
          </span>
          <span
            class="value left"
          >
            Liikeyritys Oy
          </span>
        </div>
         
        <div
          class="labelValuePair"
        >
          <span
            class="label standard"
          >
            Y-tunnus:
          </span>
          <span
            class="value left"
          >
            1234567-8
          </span>
        </div>
      </section>
    </article>
    <article
      class="section"
    >
      <section
        class="body"
      >
        <div
          class="labelValuePair"
        >
          <span
            class="label standard"
          >
            Jakeluosoite:
          </span>
          <span
            class="value left"
          >
            Liiketoimintaraitti 12
          </span>
        </div>
        <div
          class="labelValuePair"
        >
          <span
            class="label standard"
          >
            Postinumero:
          </span>
          <span
            class="value left"
          >
            00100
          </span>
        </div>
        <div
          class="labelValuePair"
        >
          <span
            class="label standard"
          >
            Postitoimipaikka:
          </span>
          <span
            class="value left"
          >
            Helsinki
          </span>
        </div>
      </section>
    </article>
    <article
      class="section"
    >
      <section
        class="body"
      >
        <div
          class="labelValuePair"
        >
          <span
            class="label standard"
          >
            Asiakasryhmä:
          </span>
          <span
            class="value left"
          >
            Yritys
          </span>
        </div>
      </section>
    </article>
    <article
      class="section"
    >
      <h4
        class="text standard h4 m title"
      >
        YHTEYSHENKILÖ
      </h4>
      <section
        class="body"
      >
        <div
          class="labelValuePair"
        >
          <span
            class="label standard"
          >
            Etunimet:
          </span>
          <span
            class="value left"
          >
            Testi
          </span>
        </div>
        <div
          class="labelValuePair"
        >
          <span
            class="label standard"
          >
            Sukunimi:
          </span>
          <span
            class="value left"
          >
            Käyttäjä
          </span>
        </div>
        <div
          class="labelValuePair"
        >
          <span
            class="label standard"
          >
            Henkilötunnus:
          </span>
          <span
            class="value left"
          >
            010101A1234
          </span>
        </div>
      </section>
    </article>
    <article
      class="section"
    >
      <section
        class="body"
      >
        <div
          class="labelValuePair"
        >
          <span
            class="label standard"
          >
            Matkapuhelin:
          </span>
          <span
            class="value left"
          >
            0504391742
          </span>
        </div>
        <div
          class="labelValuePair"
        >
          <span
            class="label standard"
          >
            Sähköpostiosoite:
          </span>
          <span
            class="value left"
          >
            test@example.com
          </span>
        </div>
      </section>
    </article>
    <article
      class="section"
    >
      <section
        class="body"
      >
        <div
          class="labelValuePair"
        >
          <span
            class="label standard"
          />
          <span
            class="value left"
          >
            Laskutus paperisena
          </span>
        </div>
      </section>
    </article>
    <article
      class="section"
    >
      <section
        class="body"
      >
        <div
          class="labelValuePair"
        >
          <span
            class="label standard"
          >
            Huomiot:
          </span>
          <span
            class="value left"
          >
            Testikäyttäjä
          </span>
        </div>
      </section>
    </article>
  </div>
   
</div>
`;

exports[`CustomerProfileCard with the minimum organization customer profile fields renders normally 1`] = `
<div
  class="card"
>
  <div
    class="cardHeader"
  >
    <span
      class="title"
    >
      ASIAKASTIEDOT
    </span>
  </div>
  <div
    class="cardBody"
  >
    <article
      class="section"
    >
      <h4
        class="text standard h4 m title"
      >
        YRITYS / YHTEISÖ
      </h4>
      <section
        class="body"
      >
        <div
          class="labelValuePair"
        >
          <span
            class="label standard"
          >
            Nimi:
          </span>
          <span
            class="value left"
          >
            Liikeyritys Oy
          </span>
        </div>
         
        <div
          class="labelValuePair"
        >
          <span
            class="label standard"
          >
            Y-tunnus:
          </span>
          <span
            class="value left"
          >
            1234567-8
          </span>
        </div>
      </section>
    </article>
    <article
      class="section"
    >
      <section
        class="body"
      >
        <div
          class="labelValuePair"
        >
          <span
            class="label standard"
          >
            Jakeluosoite:
          </span>
          <span
            class="value left"
          >
            Liiketoimintaraitti 12
          </span>
        </div>
        <div
          class="labelValuePair"
        >
          <span
            class="label standard"
          >
            Postinumero:
          </span>
          <span
            class="value left"
          >
            00100
          </span>
        </div>
        <div
          class="labelValuePair"
        >
          <span
            class="label standard"
          >
            Postitoimipaikka:
          </span>
          <span
            class="value left"
          >
            Helsinki
          </span>
        </div>
      </section>
    </article>
    <article
      class="section"
    >
      <section
        class="body"
      >
        <div
          class="labelValuePair"
        >
          <span
            class="label standard"
          >
            Asiakasryhmä:
          </span>
          <span
            class="value left"
          >
            Yritys
          </span>
        </div>
      </section>
    </article>
    <article
      class="section"
    >
      <h4
        class="text standard h4 m title"
      >
        YHTEYSHENKILÖ
      </h4>
      <section
        class="body"
      >
        <div
          class="labelValuePair"
        >
          <span
            class="label standard"
          >
            Etunimet:
          </span>
          <span
            class="value left"
          >
            Testi
          </span>
        </div>
        <div
          class="labelValuePair"
        >
          <span
            class="label standard"
          >
            Sukunimi:
          </span>
          <span
            class="value left"
          >
            Käyttäjä
          </span>
        </div>
      </section>
    </article>
    <article
      class="section"
    >
      <section
        class="body"
      >
        <div
          class="labelValuePair"
        >
          <span
            class="label standard"
          >
            Matkapuhelin:
          </span>
          <span
            class="value left"
          >
            -
          </span>
        </div>
        <div
          class="labelValuePair"
        >
          <span
            class="label standard"
          >
            Sähköpostiosoite:
          </span>
          <span
            class="value left"
          >
            -
          </span>
        </div>
      </section>
    </article>
    <article
      class="section"
    >
      <section
        class="body"
      >
        <div
          class="labelValuePair"
        >
          <span
            class="label standard"
          >
            Huomiot:
          </span>
          <span
            class="value left"
          >
            -
          </span>
        </div>
      </section>
    </article>
  </div>
   
</div>
`;

exports[`CustomerProfileCard with the minimum private customer profile fields renders normally 1`] = `
<div
  class="card"
>
  <div
    class="cardHeader"
  >
    <span
      class="title"
    >
      ASIAKASTIEDOT
    </span>
  </div>
  <div
    class="cardBody"
  >
    <article
      class="section"
    >
      <h4
        class="text standard h4 m title"
      >
        HENKILÖTIEDOT
      </h4>
      <section
        class="body"
      >
        <div
          class="labelValuePair"
        >
          <span
            class="label standard"
          >
            Etunimet:
          </span>
          <span
            class="value left"
          >
            Testi
          </span>
        </div>
        <div
          class="labelValuePair"
        >
          <span
            class="label standard"
          >
            Sukunimi:
          </span>
          <span
            class="value left"
          >
            Käyttäjä
          </span>
        </div>
      </section>
    </article>
    <article
      class="section"
    >
      <section
        class="body"
      >
        <div
          class="labelValuePair"
        >
          <span
            class="label standard"
          >
            Jakeluosoite:
          </span>
          <span
            class="value left"
          >
            -
          </span>
        </div>
        <div
          class="labelValuePair"
        >
          <span
            class="label standard"
          >
            Postinumero:
          </span>
          <span
            class="value left"
          >
            -
          </span>
        </div>
        <div
          class="labelValuePair"
        >
          <span
            class="label standard"
          >
            Postitoimipaikka:
          </span>
          <span
            class="value left"
          >
            -
          </span>
        </div>
      </section>
    </article>
    <article
      class="section"
    >
      <section
        class="body"
      >
        <div
          class="labelValuePair"
        >
          <span
            class="label standard"
          >
            Matkapuhelin:
          </span>
          <span
            class="value left"
          >
            -
          </span>
        </div>
        <div
          class="labelValuePair"
        >
          <span
            class="label standard"
          >
            Sähköpostiosoite:
          </span>
          <span
            class="value left"
          >
            -
          </span>
        </div>
      </section>
    </article>
    <article
      class="section"
    >
      <section
        class="body"
      >
        <div
          class="labelValuePair"
        >
          <span
            class="label standard"
          >
            Asiakasryhmä:
          </span>
          <span
            class="value left"
          >
            Yksityinen
          </span>
        </div>
      </section>
    </article>
    <article
      class="section"
    >
      <section
        class="body"
      >
        <div
          class="labelValuePair"
        >
          <span
            class="label standard"
          >
            Huomiot:
          </span>
          <span
            class="value left"
          >
            -
          </span>
        </div>
      </section>
    </article>
  </div>
   
</div>
`;
